# demo_ivoclar_offline

./: Cargo.toml  README.md
src/: lib.rs
