[package]
name = "ivoclar-offline"
version = "0.1.0"
edition = "2024"

[lib]
name = "ivoclar_offline"
path = "src/lib.rs"

[[bin]]
name = "scrape"
path = "src/bin/scrape.rs"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[dependencies]
axum = "0.8"
reqwest = "0.12"
serde_json = "1"
thirtyfour = "0.35"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
